[1.10.6-dev1]新开分支用于修复bug,master分支开始重构